# pixai-auto-claimer

./: components.d.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  app.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dto.rs  error.rs  main.rs  panic.rs  state.rs
src-tauri/src/claimer/: chrome_driver.rs  mod.rs
src/components/: About.vue  JobInfo.vue  Main.vue  Settings.vue
src/components/account/: AccountStatus.vue  EditAccount.vue
src/i18n/: base.d.ts  en.ts  messages.ts  zh.ts
src/store/: store.ts
