[package]
name = "pixai-auto-claimer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tauri = { version = "1", features = ["shell-open"] }
tokio = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
platform-dirs = "0.3.0"
thiserror = "1.0.57"
native-dialog = {version = "0.7.0", features = ["windows_dpi_awareness"] }
thirtyfour = {version = "0.31.0", default-features = false, features = ["native-tls", "thirtyfour-macros"] }
which = "6.0.0"
once_cell = "1.19.0"
portpicker = "0.1.1"

[dev-dependencies]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
